# cerebra_rviz_plugins

./: .gitattributes  Dockerfile  README.md  dependencies-amd64.txt  entrypoint.sh  mkdocs.yml
.github/: find_changed_packages.py  get_all_packages.py
.github/workflows/: build-docs.yml  build.yml  cerebra-rviz.yml  main.yml  pr.yml  release.yml
cerebra_rviz/: .gitattributes  .gitignore  Makefile  cerebra-rviz.in  changelog  control.in
cerebra_rviz/cerebra-rviz/DEBIAN/: control
cerebra_rviz/cerebra-rviz/usr/share/cerebra-rviz/: cerebra.rviz  origin.urdf
cerebra_rviz/cerebra-rviz/usr/share/cerebra-rviz/meshes/: main_body_v10.stl  wheel_T530.stl
cerebra_rviz/cerebra-rviz/usr/share/doc/cerebra-rviz/: copyright
cerebra_rviz_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
cerebra_rviz_plugins/include/information_panel/: information_panel.h
cerebra_rviz_plugins/launch/: cerebra.launch.py  cerebra.rviz
cerebra_rviz_plugins/src/: information_panel.cpp
docs/: index.md  requirements.txt
docs/styling/: avular.css
example_panel/: CMakeLists.txt  package.xml  plugin_description.xml
example_panel/include/example_panel/: example_panel.h
example_panel/src/: example_panel.cpp
interface_dependencies/: ament-copyright-avular_amd64_3.0.0.deb  autonomy-msgs_amd64_2.2.0.deb  cmake-avular_amd64_3.0.0.deb  origin-msgs_amd64_1.0.0.deb
